# fastapi-blueprint

./: .mcp.json  .pre-commit-config.yaml  AIDD.md  AIDD_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  config.yml  docker-compose.local.yml  pyproject.toml  run_microservice.py  run_server_local.py
.claude/: settings.json
.claude/hooks/: pre-tool-security.sh  pre_tool_security.py
.claude/skills/_shared/: project-dna.md
.claude/skills/add-api/: SKILL.md
.claude/skills/add-cross-domain/: SKILL.md
.claude/skills/add-worker-task/: SKILL.md
.claude/skills/fix-bug/: SKILL.md
.claude/skills/migrate-domain/: SKILL.md
.claude/skills/new-domain/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/review-architecture/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/sync-guidelines/: SKILL.md
.claude/skills/test-domain/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: architecture_conventions.md  project_overview.md  refactoring_status.md  suggested_commands.md
_env/: local.env.example
docs/: README.ko.md
docs/history/: 013-why-ioc-container.md  015-rebrand-agent-platform.md  README.md
migrations/: env.py  env_utils.py
src/: app.py  bootstrap.py
src/_apps/server/: app.py  bootstrap.py
src/_apps/worker/: app.py  bootstrap.py
src/_core/: config.py
src/apps/gateway/: app.py
src/apps/monolith/: app.py
src/chat/: app.py
src/domains/chat/: app.py
src/domains/user/: app.py
src/user/: app.py
tests/: conftest.py
tests/factories/: user_factory.py
(+61 files in other folders)
